--- a/src/app/c_privado/menu/menu.page.html
+++ b/src/app/c_privado/menu/menu.page.html
@@ -21,12 +21,12 @@
       <ion-label class="text-color-purple text-bold">Noticias</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="planificacion">
+   <!--  <ion-tab-button tab="planificacion"> -->
       <!-- <ion-icon name="list-circle-outline"></ion-icon>
       <ion-label>Planificación</ion-label> -->
-      <ion-icon src="/assets/iconos/o_planification.svg"></ion-icon>
+<!--       <ion-icon src="/assets/iconos/o_planification.svg"></ion-icon>
       <ion-label class="text-color-purple text-bold">Planificación</ion-label>
-    </ion-tab-button>
+    </ion-tab-button> -->
 
   </ion-tab-bar>
 </ion-tabs>
