--- a/src/app/consumidor/tab_carrito/carrito/carrito.page.html
+++ b/src/app/consumidor/tab_carrito/carrito/carrito.page.html
@@ -64,10 +64,10 @@
         <br>
         <div class="text-center size-text35px text-bold text-color-purple" style="margin-bottom: 10px;">Selecciona el
           lugar de entrega</div>
-        <form>
+        <form [formGroup]="ionicForm">
           <ion-list>
 
-            <ion-radio-group [(ngModel)]="place_delivery" name="place_delivery" mode="ios"
+            <ion-radio-group [(ngModel)]="place_delivery" formControlName="place_delivery" 
               value="Recogida en punto de venta">
               <div class="contenedor-date">
                 <ion-item lines="none"
@@ -86,23 +86,31 @@
                   <ion-label style="font-weight: bold;">Recogida en el huerto</ion-label>
                   <ion-radio slot="end" value="Recogida en el huerto"></ion-radio>
                 </ion-item>
+                <span class="error-validate" *ngIf="isSubmitted && errorControl.place_delivery.errors?.required">
+                  Este campo es obligatorio.
+                 </span>
               </div>
+           
             </ion-radio-group>
             <div class="contenedor-date">
               <ion-item lines="none">
                 <div class="ion-padding" style="text-align:center;">
                   <div class="text-color-purple text-bold">Selecciona la fecha y hora de entrega:</div>
-                  <ion-datetime [(ngModel)]="deliverDate" name="deliverDate" presentation="date">
+                  <ion-datetime [(ngModel)]="deliverDate" presentation="date" formControlName="deliverDate">
                   </ion-datetime>
                 </div>
+             
               </ion-item>
+              <span class="error-validate" *ngIf="isSubmitted && errorControl.hour.errors?.required">
+                Este campo es obligatorio.
+               </span>
             </div>
             <ion-card>
              
                 <ion-label style=" color: var(--warmin-color-purple);" position="floating" class="texto-center text-bold">* Hora de entrega
                 </ion-label>
                 <ion-select mode="ios" interface="popover" placeholder="Seleccione..."
-                  [(ngModel)]="hour" [ngModelOptions]="{standalone: true}">
+                  [(ngModel)]="hour" formControlName="hour">
                   <ion-select-option value="08:00">08:00</ion-select-option>
                   <ion-select-option value="09:00">09:00</ion-select-option>
                   <ion-select-option value="10:00">10:00</ion-select-option>
@@ -114,8 +122,11 @@
                   <ion-select-option value="16:00">16:00</ion-select-option>
                   <ion-select-option value="17:00">17:00</ion-select-option>
                 </ion-select>
-           
+                <span class="error-validate" *ngIf="isSubmitted && errorControl.hour.errors?.required">
+                  Este campo es obligatorio.
+                 </span>
             </ion-card>
+           
           </ion-list>
           <div class="btn-ordenar" style="padding: 5px;">
             <ion-button type="submit" (click)="createOrder()" expand="block" class="boton-warmi-in">
