--- a/src/app/c_privado/tab_ordenes/detalles-entrega/detalles-entrega.page.scss
+++ b/src/app/c_privado/tab_ordenes/detalles-entrega/detalles-entrega.page.scss
@@ -1,19 +1,58 @@
-.img-comprador{
-    width: 95%;
-    height: 20%;
-    text-align: center;
-}
-img{
+// .img-comprador{
+//     width: 95%;
+//     height: 20%;
+//     text-align: center;
+// }
+// img{
+//     width: 100%;
+//     height: 100%;
+//     object-fit: contain;
+// }
+// capacitor-google-maps {
+//     display: inline-block;
+//     width: 100%;
+//     height: 100%;
+//   }
+// .map{
+//     height: 35%;
+//     width: 95%;
+// }
+
+.contenedor-perfiles {
+    display: flex;
+    flex-direction: row;
     width: 100%;
-    height: 100%;
-    object-fit: contain;
+    height: 200px;
+    background: rgba(255, 255, 255, 0.800);
 }
-capacitor-google-maps {
-    display: inline-block;
-    width: 100%;
-    height: 100%;
-  }
-.map{
-    height: 35%;
-    width: 95%;
+
+.perfil-vendedora {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 5px;
+    flex-direction: column;
+}
+
+.perfil-consumidor {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 5px;
+    flex-direction: column;
+}
+
+img {
+    border-radius: 10px;
+}
+
+.datos {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.separated-profile{
+    margin-left: 30px;
 }
