--- a/src/app/c_bus/novedades/novedades.page.scss
+++ b/src/app/c_bus/novedades/novedades.page.scss
@@ -1,5 +1,5 @@
 .titulo-fondo{
-    --background: #A9C9F9;
+    --background: var(--warmin-color-brown);
     text-align: center;
     }
     capacitor-google-maps {
