--- a/src/app/c_bus/novedades/novedades.page.html
+++ b/src/app/c_bus/novedades/novedades.page.html
@@ -3,28 +3,28 @@
   <div class="border-top-page">
     <!-- Contenedor 1 -->
     <div class="contenedor-header">
-      <ion-icon class="icon-header size-icon" slot="start" src="/assets/icon/ubication.svg">
+      <ion-icon class="icon-header size-icon" slot="start" src="/assets/iconos/w_register.svg">
       </ion-icon>
-      <div class="texto-header">Noticia</div>
+      <div class="texto-header">Noticias</div>
     </div>    
   </div>
 
   <ion-card style="height: 95%; width: 95%;">
   <ion-card class="titulo-fondo">
-    <h4>Vía cerrada</h4>
+    <h4 style="color: #fff;">Vía cerrada</h4>
   </ion-card>
   <br>
   <br>
-  <h6 class="ion-margin">Punto de referencia</h6>
+  <div class="text-bold text-color-brown">Punto de referencia</div>
   <ion-card class="map">
     <capacitor-google-maps id="map"></capacitor-google-maps>
   </ion-card>
   <ion-card>
   
-    <ion-item>
-      <ion-label position="stacked">Descripción</ion-label>
-      <ion-textarea>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed, ex numquam? Magnam delectus laborum dolor alias non aut dicta id repellendus cum sapiente, facilis aperiam numquam. Atque natus cum iure?</ion-textarea>
-    </ion-item>
+    <div style="display: flex; flex-direction: column;">
+      <div position="stacked" class="text-bold text-color-brown">Descripción</div>
+      <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam vel et odio, vitae expedita officia minus earum quo facere qui.</div>
+    </div>
   </ion-card>
 
   </ion-card>
