color de recogida

--- a/src/app/consumidor/tab_carrito/carrito/carrito.page.html
+++ b/src/app/consumidor/tab_carrito/carrito/carrito.page.html
@@ -71,18 +71,18 @@
               value="Recogida en punto de venta">
               <div class="contenedor-date">
                 <ion-item lines="none"
-                  style="--background:var(--warmin-color-yellow);width: 350px; border-top-left-radius: 10px; border-top-right-radius: 10px;">
+                  style="--background:#f9b03330;width: 350px; border-top-left-radius: 10px; border-top-right-radius: 10px;">
                   <ion-label style="font-weight: bold;">Recogida en punto de venta</ion-label>
                   <ion-radio slot="end" value="Recogida en punto de venta"></ion-radio>
                 </ion-item>
 
-                <ion-item lines="none" style="--background:var(--warmin-color-yellow);width: 350px;">
+                <ion-item lines="none" style="--background:#f9b03330;width: 350px;">
                   <ion-label style="font-weight: bold;">Entrega en domicilio</ion-label>
                   <ion-radio slot="end" value="Entrega en domicilio"></ion-radio>
                 </ion-item>
 
                 <ion-item lines="none"
-                  style="--background:var(--warmin-color-yellow);width: 350px; border-bottom-left-radius: 10px; border-bottom-right-radius: 10px;">
+                  style="--background:#f9b03330;width: 350px; border-bottom-left-radius: 10px; border-bottom-right-radius: 10px;">
                   <ion-label style="font-weight: bold;">Recogida en el huerto</ion-label>
                   <ion-radio slot="end" value="Recogida en el huerto"></ion-radio>
                 </ion-item>
