--- a/src/app/c_privado/tab_inicio/perfil-ma/perfil-ma.page.html
+++ b/src/app/c_privado/tab_inicio/perfil-ma/perfil-ma.page.html
@@ -18,7 +18,7 @@
   <!-- Dato 1 -->
   <div class="datos-personales">
     <div class="imagen-buttom">
-      <img class="img-profile" src="{{foto || 'assets/img/comprador.jpg'}}" />
+      <img class="img-profile" src="{{foto ?? 'assets/img/profileDefault.jpg'}}" />
       <a class="imagen-in-buttom" href="http://">
         <ion-icon slot="start" src="assets/iconos/camera.svg" class="size-icon-camera"></ion-icon>
       </a>
