--- a/src/app/consumidor/tab_agricultoras/detalles-producto/detalles-producto.page.html
+++ b/src/app/consumidor/tab_agricultoras/detalles-producto/detalles-producto.page.html
@@ -9,7 +9,7 @@
   </div>
   <!-- Contenedor Imagen + Descripcion + precio -->
   <div class="contenedor-producto">
-    <div class="imagen-producto"><img src="assets/img/lechuga.jpg" alt=""></div>
+    <div class="imagen-producto"><img src="{{fotoProduct || 'assets/img/compra.png'}}" alt=""></div>
     <div class="descripcion-imagen">
       <ion-label class="nombre-producto text-color-brown text-bold">{{productName}}</ion-label>
       <ion-label class="precio-producto text-color-brown text-bold">Precio</ion-label>
