--- a/src/app/c_privado/tab_inicio/perfil-ma/perfil-ma.page.html
+++ b/src/app/c_privado/tab_inicio/perfil-ma/perfil-ma.page.html
@@ -29,8 +29,8 @@
         <ion-card-subtitle>Venta de productos frescos</ion-card-subtitle>
       </ion-card-header>
       <ion-card-content>
-        <div class="text-bold text-color-brown">Id:</div>
-        <div class="text-color-purple">{{identification_card}}</div>
+  <!--       <div class="text-bold text-color-brown">Id:</div>
+        <div class="text-color-purple">{{identification_card}}</div> -->
         <!--  -->
         <div class="text-bold text-color-brown">Teléfono:</div>
         <div class="text-color-purple">{{phone}}</div>
