--- a/src/app/c_privado/tab_ordenes/detalles-entrega/detalles-entrega.page.html
+++ b/src/app/c_privado/tab_ordenes/detalles-entrega/detalles-entrega.page.html
@@ -10,7 +10,7 @@
     <div class="perfil-vendedora">
       <div>
         <ion-thumbnail style="height: 100px; width: 100px;" slot="end">
-          <img src="{{imageSeller ?? 'assets/img/profileDefault.jpg'}}" />
+          <img src="{{imageSeller || 'assets/img/profileDefault.jpg'}}" />
         </ion-thumbnail>
       </div>
       <div class="datos">
