--- a/src/app/consumidor/tab_agricultoras/perfil-ma/perfil-ma.page.html
+++ b/src/app/consumidor/tab_agricultoras/perfil-ma/perfil-ma.page.html
@@ -29,8 +29,8 @@
         <ion-card-subtitle>Venta de productos frescos</ion-card-subtitle>
       </ion-card-header>
       <ion-card-content>
-        <div class="text-bold text-color-brown">Id:</div>
-        <div class="text-color-purple">{{identification_card}}</div>
+<!--         <div class="text-bold text-color-brown">Id:</div>
+        <div class="text-color-purple">{{identification_card}}</div> -->
         <!--  -->
         <div class="text-bold text-color-brown">Teléfono:</div>
         <div class="text-color-purple">{{phone}}</div>
@@ -72,7 +72,7 @@
       <app-googlemaps [buscador]="buscador"  [miUbicacion]="miUbicacion" [feature]="feature"></app-googlemaps>
     </ion-card> -->
     <ion-card class="tam-map">
-      <app-googlemaps [localizacion]="localizacion" [feature] = "feature" (enviar)="recibirData($event)"></app-googlemaps>
+      <app-googlemaps [miUbicacion]="miUbicacion" [localizacion]="localizacion" [feature] = "feature" (enviar)="recibirData($event)"></app-googlemaps>
     </ion-card>
   </div>
   
