--- a/src/app/ma_lideresa/tab-inicio/perfilma/perfilma.page.html
+++ b/src/app/ma_lideresa/tab-inicio/perfilma/perfilma.page.html
@@ -11,7 +11,7 @@
   </div>
   <div class="datos-personales">
     <div class="imagen-buttom">
-      <img class="img-profile" src="{{foto || 'assets/img/comprador.jpg'}}" />
+      <img class="img-profile" src="{{foto || 'assets/img/profileDefault.jpg'}}" />
       <!-- <a class="imagen-in-buttom" href="http://">
         <ion-icon slot="start" src="assets/iconos/camera.svg" class="size-icon-camera"></ion-icon>
       </a> -->
@@ -22,8 +22,8 @@
         <ion-card-subtitle>Venta de productos frescos</ion-card-subtitle>
       </ion-card-header>
       <ion-card-content>
-        <div class="text-bold text-color-brown">Id:</div>
-        <div class="text-color-purple">{{identification_card}}</div>
+       <!--  <div class="text-bold text-color-brown">Id:</div>
+        <div class="text-color-purple">{{identification_card}}</div> -->
         <!--  -->
         <div class="text-bold text-color-brown">Teléfono:</div>
         <div class="text-color-purple">{{phone}}</div>
