--- a/src/app/consumidor/tab_carrito/carrito/carrito.page.html
+++ b/src/app/consumidor/tab_carrito/carrito/carrito.page.html
@@ -1,142 +1,3 @@
 <ion-content>
-  <div class="border-top-page">
-
-    <div class="contenedor-header">
-      <ion-icon class="icon-header size-icon" slot="start" src="/assets/iconos/w_car.svg">
-      </ion-icon>
-      <div class="texto-header">Carrito de compra</div>
-    </div>
-  </div>
-
-  <div class="contenedor-total">
-    <div class="datos">
-      <div class="texto-carrito text-color-brown text-bold">Total a pagar</div>
-      <div class="texto-carrito total-a-pagar">$ {{total}}</div>
-    </div>
-  </div>
-
-  <div class="contenedor-list-ventas" id="contenedor-list-ventas">
-    <ion-card class="contenedor-card-p" *ngFor="let product of products">
-      <ion-card-header class="encabezado-card">
-        <ion-card-title class="text-white text-bold">{{product.farmer}}</ion-card-title>
-        <ion-card-subtitle class="text-white">{{product.phone}}</ion-card-subtitle>
-
-      </ion-card-header>
-
-      <div>
-        <ion-card-content class="descripcion-card">
-          <ion-list>
-            <ion-item  lines="none">
-              <!-- <ion-item *ngFor="let product of products"> -->
-              <ion-thumbnail slot="start">
-                <img src="{{product.fotoProduct || 'assets/img/compra.png'}}" />
-              </ion-thumbnail>
-              <ion-label>
-                <div class="text-bold text-color-purple">{{product.productName}}</div>
-                <ion-grid>
-                  <ion-row>
-                    <ion-col>
-                      <div class="text-color-purple">{{product.measure}}</div>
-                    </ion-col>
-                    <ion-col class="text-color-purple text-bold" style="text-align: right;">
-                      $ {{product.price}}
-                    </ion-col>
-                    <ion-chip class="quitar" (click)="deleteProduct(product)">-</ion-chip>
-                  </ion-row>
-                </ion-grid>
-              </ion-label>
-            </ion-item>
-          </ion-list>
-        </ion-card-content>
-      </div>
-
-    </ion-card>
-
-  </div>
-  <div class="btn-ordenar">
-
-    <ion-button class="boton-warmi-in" id="open-modal" expand="block">Confirme canasta de compras</ion-button>
-  </div>
-
-  <ion-modal #modal trigger="open-modal" [presentingElement]="presentingElement">
-    <ng-template>
-      <ion-content>
-        <br>
-        <div class="text-center size-text35px text-bold text-color-purple" style="margin-bottom: 10px;">Selecciona el
-          lugar de entrega</div>
-        <form [formGroup]="ionicForm">
-          <ion-list>
-
-            <ion-radio-group [(ngModel)]="place_delivery" formControlName="place_delivery" 
-              value="Recogida en punto de venta">
-              <div class="contenedor-date">
-                <ion-item lines="none"
-                  style="--background:#f9b03330;width: 350px; border-top-left-radius: 10px; border-top-right-radius: 10px;">
-                  <ion-label style="font-weight: bold;">Recogida en punto de venta</ion-label>
-                  <ion-radio slot="end" value="Recogida en punto de venta"></ion-radio>
-                </ion-item>
-
-                <ion-item lines="none" style="--background:#f9b03330;width: 350px;">
-                  <ion-label style="font-weight: bold;">Entrega en domicilio</ion-label>
-                  <ion-radio slot="end" value="Entrega en domicilio"></ion-radio>
-                </ion-item>
-
-                <ion-item lines="none"
-                  style="--background:#f9b03330;width: 350px; border-bottom-left-radius: 10px; border-bottom-right-radius: 10px;">
-                  <ion-label style="font-weight: bold;">Recogida en el huerto</ion-label>
-                  <ion-radio slot="end" value="Recogida en el huerto"></ion-radio>
-                </ion-item>
-                <span class="error-validate" *ngIf="isSubmitted && errorControl.place_delivery.errors?.required">
-                  Este campo es obligatorio.
-                 </span>
-              </div>
-           
-            </ion-radio-group>
-            <div class="contenedor-date">
-              <ion-item lines="none">
-                <div class="ion-padding" style="text-align:center;">
-                  <div class="text-color-purple text-bold">Selecciona la fecha y hora de entrega:</div>
-                  <ion-datetime [(ngModel)]="deliverDate" presentation="date" formControlName="deliverDate">
-                  </ion-datetime>
-                </div>
-             
-              </ion-item>
-              <span class="error-validate" *ngIf="isSubmitted && errorControl.hour.errors?.required">
-                Este campo es obligatorio.
-               </span>
-            </div>
-            <ion-card>
-             
-                <ion-label style=" color: var(--warmin-color-purple);" position="floating" class="texto-center text-bold">* Hora de entrega
-                </ion-label>
-                <ion-select mode="ios" interface="popover" placeholder="Seleccione..."
-                  [(ngModel)]="hour" formControlName="hour">
-                  <ion-select-option value="08:00">08:00</ion-select-option>
-                  <ion-select-option value="09:00">09:00</ion-select-option>
-                  <ion-select-option value="10:00">10:00</ion-select-option>
-                  <ion-select-option value="11:00">11:00</ion-select-option>
-                  <ion-select-option value="12:00">12:00</ion-select-option>
-                  <ion-select-option value="13:00">13:00</ion-select-option>
-                  <ion-select-option value="14:00">14:00</ion-select-option>
-                  <ion-select-option value="15:00">15:00</ion-select-option>
-                  <ion-select-option value="16:00">16:00</ion-select-option>
-                  <ion-select-option value="17:00">17:00</ion-select-option>
-                </ion-select>
-                <span class="error-validate" *ngIf="isSubmitted && errorControl.hour.errors?.required">
-                  Este campo es obligatorio.
-                 </span>
-            </ion-card>
-           
-          </ion-list>
-          <div class="btn-ordenar" style="padding: 5px;">
-            <ion-button type="submit" (click)="createOrder()" expand="block" class="boton-warmi-in">
-              <ion-icon name="card-outline"></ion-icon> Ordenar
-            </ion-button>
-          </div>
-
-        </form>
-      </ion-content>
-    </ng-template>
-  </ion-modal>
-
+  <app-detallescarrito [productos]="productos"></app-detallescarrito>
 </ion-content>
