--- a/src/app/consumidor/components/detallescarrito/detallescarrito.component.html
+++ b/src/app/consumidor/components/detallescarrito/detallescarrito.component.html
@@ -100,7 +100,7 @@
               </div>
            
             </ion-item>
-            <span class="error-validate" *ngIf="isSubmitted && errorControl.hour.errors?.required">
+            <span class="error-validate" *ngIf="isSubmitted && errorControl.deliverDate.errors?.required">
               Este campo es obligatorio.
              </span>
           </div>
