--- a/src/app/consumidor/modals/detallesorden/detallesorden.page.html
+++ b/src/app/consumidor/modals/detallesorden/detallesorden.page.html
@@ -24,7 +24,7 @@
                   <!-- {{product.quantity}} -->
                 </ion-col>
                 <ion-col class="text-color-purple text-bold" style="text-align: right;">
-                  {{product.subtotal}}
+                  {{product.subtotal}} $
                 </ion-col>
                 
               </ion-row>
