--- a/src/app/consumidor/tab_agricultoras/modal-huerto-venta/modal-huerto-venta.page.html
+++ b/src/app/consumidor/tab_agricultoras/modal-huerto-venta/modal-huerto-venta.page.html
@@ -15,7 +15,7 @@
     <div class="modal-name-user">{{name}}</div>
     <div>{{description}}</div>
     <div>
-      <ion-button *ngIf="!profile" class="boton-warmi-in" (click)="viewProfile()">Ver perfil</ion-button>
+      <ion-button *ngIf="profile" class="boton-warmi-in" (click)="viewProfile()">Ver perfil</ion-button>
     </div>
   </div>
 </ion-content>
