--- a/src/app/ma_vendedora/modals/modal-privado/modal-privado.page.html
+++ b/src/app/ma_vendedora/modals/modal-privado/modal-privado.page.html
@@ -7,7 +7,7 @@
     </div>
   </div>
   <div class="contenedor-perfil">
-    <div class="imagen-conductor"><img width="125" src="{{image  ||  'assets/img/comprador.jpg'}}" /></div>
+    <div class="imagen-conductor"><img width="125" src="{{image  ||  'assets/img/profileDefault.jpg'}}" /></div>
     <div class="informacion-conductor">
       <div class="start-rat">
         <div class="ion-text-center">
