--- a/src/app/consumidor/tab_inicio/inicio/inicio.page.html
+++ b/src/app/consumidor/tab_inicio/inicio/inicio.page.html
@@ -1,45 +1,27 @@
 <ion-content>
-  <!-- Encabezado -->
-  <!-- <div>    
-    <div class="all-margin-right">
-      <label class="color-text-white bg-orange bold-text">
-        <ion-icon src="/assets/icon/ubication.svg"></ion-icon> Ubicación
-      </label>
-    </div>    
-  </div> -->
   <div class="border-top-page">
-    <!-- Contenedor 1 -->
-    <div class="contenedor-header">
-      <ion-icon class="icon-header size-icon" slot="start" src="/assets/icon/ubication.svg">
-      </ion-icon>
-      <div class="texto-header">Ubicación</div>
-    </div>
-    <!-- Contenedor 2 -->
-    <!-- <div class="contenedor-title">
-      <div>
-        <h4 class="text-center size-text35px text-bold text-color-purple">Movilidad de las vendedoras</h4>
-      </div>
-    </div> -->
-  </div>
- <!--  <div class="container-item-tipo-user"> -->
-<!--     <div>
-      <ion-item lines="none" class="input-border-bot item-native-transparency">
-        <ion-label style=" color: var(--warmin-color-purple);" position="floating" class="text-bold">
-          Selecciona el lugar </ion-label>
-        <ion-select interface="popover" class="border-option">
-          <ion-select-option class="selec-text" value="apples">Centro de acopio</ion-select-option>
-          <ion-select-option class="selec-text" value="oranges">Huertos familiares</ion-select-option>
-          <ion-select-option class="selec-text" value="bananas">Ferias</ion-select-option>
-        </ion-select>
-      </ion-item>
-    </div> -->
-    <!-- </ion-col> -->
-    <!-- </ion-row> -->
- <!--  </div> -->
 
-  <!-- <ion-card style="width: 95%; height: 70%;">
-    <app-googlemaps [modal]="modal" [localizacion]="localizacion" [feature]="feature"></app-googlemaps>
-  </ion-card> -->
+  <div class="contenedor-header">
+    <ion-icon class="icon-header size-icon" slot="start" src="/assets/icon/ubication.svg">
+    </ion-icon>
+    <div class="texto-header">Ubicación</div>
+  </div>
+</div>
+  <ion-card class="card-tabs-bg">
+    <ion-segment [value]="valueSelected" [scrollable]="true" (ionChange)="segmentChange($event)">
+      <ion-segment-button value="1">
+        <ion-label >Agricultoras</ion-label>
+      </ion-segment-button>
+  
+      <ion-segment-button value="2">
+        <ion-label>Autos privados</ion-label>
+      </ion-segment-button>
+    </ion-segment>
+  </ion-card>
+
+  <div *ngIf="valueSelected == 2">
+    <app-privado></app-privado>
+  </div>
 
   <div class="center">
     <ion-card  class="tam-map">
